added only on production for analytics

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: home
 # Index page
 ---
-<!-- <head>
+<head>
     {% if site.google_analytics and jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %} 
-</head> -->
+</head>
 
